--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ textarea { width:100%; border-radius:12px; border:1px solid #ddd; padding:10px; 
 </div>
 
 <script>
-const API = "http://localhost:3000";
+const API = "https://nails-backend-5knq.onrender.com";
 let selectedDate = null;
 let selectedSlotId = null;
 let selectedServices = [];
