--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body {
   font-family: 'Manrope', sans-serif;
   color: #272A2A;
   /* Твое изображение на фоне */
-  background: url('./bg.jpg') no-repeat center center fixed;
+  background: url('https://pin.it/4BCPgMqUk') no-repeat center center fixed;
   background-size: cover;
   min-height: 100vh;
   line-height: 1.4;
