--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
   
   /* 2. Накладываем твою картинку */
   /* fixed важен, чтобы фон не уезжал при скролле */
-  background-image: url('./bg.jpg'); 
+  background-image: ('/Users/ooolya/nails-mini-app/2026-01-15 10.25.49 PM.jpg'); 
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
